--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,32 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+:root {
+  --color-primary: #6a8caf;
+  --color-secondary: #75b79e;
+  --color-tertiary: #a7e9af;
+  --color-accent: #eef9bf;
+  --color-light: #f4f4f4;
+  --color-dark: #25242a;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
+}
+
+body {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  color: #f4f4f4;
+  list-style: none;
+  text-decoration: none;
+}
+
+body {
+  margin: 2rem;
+  background: -webkit-gradient(linear, left top, right bottom, from(var(--color-tertiary)), to(var(--color-secondary)));
+  background: linear-gradient(to bottom right, var(--color-tertiary), var(--color-secondary));
+  height: 100vh;
+  overflow: hidden;
+}
+/*# sourceMappingURL=main.css.map */
