--- a/css/layout/_layout.scss
+++ b/css/layout/_layout.scss
@@ -9,17 +9,31 @@ body {
   height: 100vh;
 }
 
-.nav {
+.components {
   height: 85%;
   background: var(--color-dark);
   box-shadow: 0.3rem 0.8rem 2.5rem var(--color-dark);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-  &__list {
+  &__item,
+  &__item:visited,
+  &__item:link {
     // outline: crimson 1px solid;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    margin: 2.3rem;
+    padding: 0.8rem 3rem;
+    background: var(--color-primary);
+    border-radius: 0.7rem;
+    text-decoration: none;
+    color: var(--color-light);
+    transition: all 0.5s ease;
+
+    &:hover {
+      transform: scale(1.18);
+      box-shadow: 0 0.2rem 0.8rem var(--color-light);
+      background: indigo;
+    }
   }
 }
