--- a/css/main.css
+++ b/css/main.css
@@ -30,15 +30,11 @@ body {
   height: 100vh;
 }
 
-.nav {
+.components {
   height: 85%;
   background: var(--color-dark);
   -webkit-box-shadow: 0.3rem 0.8rem 2.5rem var(--color-dark);
           box-shadow: 0.3rem 0.8rem 2.5rem var(--color-dark);
-}
-
-.nav__list {
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -46,11 +42,30 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.components__item, .components__item:visited, .components__item:link {
+  margin: 2.3rem;
+  padding: 0.8rem 3rem;
+  background: var(--color-primary);
+  border-radius: 0.7rem;
+  text-decoration: none;
+  color: var(--color-light);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.components__item:hover, .components__item:visited:hover, .components__item:link:hover {
+  -webkit-transform: scale(1.18);
+          transform: scale(1.18);
+  -webkit-box-shadow: 0 0.2rem 0.8rem var(--color-light);
+          box-shadow: 0 0.2rem 0.8rem var(--color-light);
+  background: indigo;
 }
 /*# sourceMappingURL=main.css.map */
