Added Styling and Animations to btn-1

--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -7,8 +7,12 @@
   --color-tertiary: #a7e9af;
 
   --color-accent: #eef9bf;
+  --color-accent-2: #ffd369;
+  --color-accent-3: #ffcc00;
+  --color-accent-4: #fddb3a;
 
   --color-light: #f4f4f4;
 
   --color-dark: #25242a;
+  --color-dark-2: #36353a;
 }
