--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -35,6 +35,7 @@
   .buttons {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     margin-top: 3rem;
 
     .btn {
@@ -43,6 +44,34 @@
       padding: 1.1rem 4rem;
       border-radius: 50rem;
       cursor: pointer;
+
+      &__1 {
+        border-radius: 0;
+        font-size: 2rem;
+        font-family: "Druk", Arial, Helvetica, sans-serif;
+        color: var(--color-dark-2);
+        background: var(--color-accent-2);
+        transition: all 0.35s ease;
+
+        &:hover {
+          animation: levitate 1s infinite ease-in;
+        }
+      }
+    }
+  }
+
+  // Button-Animations
+  @keyframes levitate {
+    0% {
+      transform: translateY(0) scale(1);
+    }
+
+    50% {
+      transform: translateY(-1.5rem) scale(1.05);
+    }
+
+    100% {
+      transform: translateY(0);
     }
   }
 }
