--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,12 @@
   --color-secondary: #75b79e;
   --color-tertiary: #a7e9af;
   --color-accent: #eef9bf;
+  --color-accent-2: #ffd369;
+  --color-accent-3: #ffcc00;
+  --color-accent-4: #fddb3a;
   --color-light: #f4f4f4;
   --color-dark: #25242a;
+  --color-dark-2: #36353a;
 }
 
 * {
@@ -119,6 +123,9 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 3rem;
 }
 
@@ -128,5 +135,50 @@ body {
   padding: 1.1rem 4rem;
   border-radius: 50rem;
   cursor: pointer;
+}
+
+.main .buttons .btn__1 {
+  border-radius: 0;
+  font-size: 2rem;
+  font-family: "Druk", Arial, Helvetica, sans-serif;
+  color: var(--color-dark-2);
+  background: var(--color-accent-2);
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+
+.main .buttons .btn__1:hover {
+  -webkit-animation: levitate 1s infinite ease-in;
+          animation: levitate 1s infinite ease-in;
+}
+
+@-webkit-keyframes levitate {
+  0% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+  50% {
+    -webkit-transform: translateY(-1.5rem) scale(1.05);
+            transform: translateY(-1.5rem) scale(1.05);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes levitate {
+  0% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+  50% {
+    -webkit-transform: translateY(-1.5rem) scale(1.05);
+            transform: translateY(-1.5rem) scale(1.05);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 /*# sourceMappingURL=main.css.map */
