--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -145,4 +145,18 @@
       box-shadow: 0 1rem 1.5rem var(--color-dark-3);
     }
   }
+
+  @keyframes grow {
+    0% {
+      transform: scale(0);
+    }
+
+    50% {
+      transform: scale(1.5);
+    }
+
+    100% {
+      transform: scale(0);
+    }
+  }
 }
