--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -93,6 +93,18 @@
           border-radius: 0;
         }
       }
+
+      &__4 {
+        text-transform: uppercase;
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        font-size: 1.3rem;
+        color: var(--color-dark-2);
+        background: linear-gradient(
+          to bottom,
+          var(--color-primary),
+          var(--color-secondary)
+        );
+      }
     }
   }
 
