--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,13 @@ body {
   color: var(--color-dark-2);
   background: -webkit-gradient(linear, left top, left bottom, from(var(--color-primary)), to(var(--color-secondary)));
   background: linear-gradient(to bottom, var(--color-primary), var(--color-secondary));
+  -webkit-transition: all 1s ease-out;
+  transition: all 1s ease-out;
+}
+
+.main .buttons .btn__4:hover {
+  -webkit-animation: grow 1s forwards ease;
+          animation: grow 1s forwards ease;
 }
 
 @-webkit-keyframes levitate {
@@ -314,31 +321,39 @@ body {
 
 @-webkit-keyframes grow {
   0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   50% {
     -webkit-transform: scale(1.5);
             transform: scale(1.5);
+    -webkit-box-shadow: 0rem 0.5rem 1rem var(--color-dark-3);
+            box-shadow: 0rem 0.5rem 1rem var(--color-dark-3);
   }
   100% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    -webkit-box-shadow: 0rem 0.5rem 1.5rem var(--color-dark-3);
+            box-shadow: 0rem 0.5rem 1.5rem var(--color-dark-3);
   }
 }
 
 @keyframes grow {
   0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   50% {
     -webkit-transform: scale(1.5);
             transform: scale(1.5);
+    -webkit-box-shadow: 0rem 0.5rem 1rem var(--color-dark-3);
+            box-shadow: 0rem 0.5rem 1rem var(--color-dark-3);
   }
   100% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    -webkit-box-shadow: 0rem 0.5rem 1.5rem var(--color-dark-3);
+            box-shadow: 0rem 0.5rem 1.5rem var(--color-dark-3);
   }
 }
 /*# sourceMappingURL=main.css.map */
