Added the navbar page layout

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -19,7 +19,7 @@
   }
 }
 
-/////////////// Buttons ///////////////
+/////////////// MAIN SECTIONS ///////////////
 .main {
   position: relative;
   .title {
