--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -162,6 +162,25 @@
 
       &__2 {
         justify-content: space-around;
+        background-color: var(--color-primary);
+        border-radius: 0.5rem;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+        &--logo {
+          font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+          font-size: 1.8rem;
+          text-transform: uppercase;
+          color: var(--color-dark-3);
+        }
+
+        &--item {
+          transition: all 0.6s;
+          &:hover {
+            cursor: pointer;
+            color: var(--color-dark-3);
+            transform: scale(1.2);
+          }
+        }
       }
     }
   }
