--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,28 @@ body {
 .main .navbars .nav__2 {
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  background-color: var(--color-primary);
+  border-radius: 0.5rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.main .navbars .nav__2--logo {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  color: var(--color-dark-3);
+}
+
+.main .navbars .nav__2--item {
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+}
+
+.main .navbars .nav__2--item:hover {
+  cursor: pointer;
+  color: var(--color-dark-3);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 @-webkit-keyframes levitate {
