--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -182,6 +182,14 @@
           }
         }
       }
+
+      &__3 {
+        &--logo {
+        }
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
     }
   }
 
