--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -185,6 +185,18 @@
 
       &__3 {
         &--logo {
+          font-size: 2.5rem;
+          font-family: "Franklin Gothic Medium", "Arial Narrow", Arial,
+            sans-serif;
+          text-transform: uppercase;
+          font-weight: bolder;
+          font-style: italic;
+          color: var(--color-accent-2);
+          transition: all 0.4s ease-in-out;
+          &:hover {
+            transform: translateX(1.6rem);
+            cursor: pointer;
+          }
         }
         display: flex;
         justify-content: space-between;
