--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,23 @@ body {
           align-items: center;
 }
 
+.main .navbars .nav__3--logo {
+  font-size: 2.5rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-style: italic;
+  color: var(--color-accent-2);
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.main .navbars .nav__3--logo:hover {
+  -webkit-transform: translateX(1.6rem);
+          transform: translateX(1.6rem);
+  cursor: pointer;
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
