Added styling and animation to navbar items

--- a/css/main.css
+++ b/css/main.css
@@ -297,6 +297,10 @@ body {
 }
 
 .main .navbars .nav__3 {
+  background-color: var(--color-dark-2);
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: lighter;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -311,6 +315,7 @@ body {
 .main .navbars .nav__3--logo {
   font-size: 2.5rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin-right: 20rem;
   text-transform: uppercase;
   font-weight: bolder;
   font-style: italic;
@@ -323,6 +328,18 @@ body {
   -webkit-transform: translateX(1.6rem);
           transform: translateX(1.6rem);
   cursor: pointer;
+}
+
+.main .navbars .nav__3--item {
+  -webkit-transition: all 0.7s ease-in-out;
+  transition: all 0.7s ease-in-out;
+}
+
+.main .navbars .nav__3--item:hover {
+  cursor: pointer;
+  color: var(--color-accent);
+  -webkit-transform: translateY(-0.5rem);
+          transform: translateY(-0.5rem);
 }
 
 @-webkit-keyframes levitate {
