--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -184,10 +184,19 @@
       }
 
       &__3 {
+        background-color: var(--color-dark-2);
+        text-transform: uppercase;
+        font-size: 0.8rem;
+        font-weight: lighter;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
         &--logo {
           font-size: 2.5rem;
           font-family: "Franklin Gothic Medium", "Arial Narrow", Arial,
             sans-serif;
+          margin-right: 20rem;
           text-transform: uppercase;
           font-weight: bolder;
           font-style: italic;
@@ -198,9 +207,15 @@
             cursor: pointer;
           }
         }
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+
+        &--item {
+          transition: all 0.7s ease-in-out;
+          &:hover {
+            cursor: pointer;
+            color: var(--color-accent);
+            transform: translateY(-0.5rem);
+          }
+        }
       }
     }
   }
