Styled nabar-4 and added animations

--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -12,6 +12,7 @@
   --color-accent-4: #fddb3a;
 
   --color-light: #f4f4f4;
+  --color-light-2: #adadad;
 
   --color-dark: #25242a;
   --color-dark-2: #36353a;
