Changed font family

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -251,7 +251,7 @@
       &__5 {
         background-color: var(--color-light);
         color: var(--color-dark);
-        font-family: Georgia, "Times New Roman", Times, serif;
+        font-family: "Druk";
 
         &--logo {
           text-transform: uppercase;
