--- a/css/main.css
+++ b/css/main.css
@@ -382,7 +382,7 @@ body {
 .main .navbars .nav__5 {
   background-color: var(--color-light);
   color: var(--color-dark);
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Druk";
 }
 
 .main .navbars .nav__5--logo {
