Decreased font size

--- a/css/main.css
+++ b/css/main.css
@@ -387,8 +387,8 @@ body {
 
 .main .navbars .nav__5--logo {
   text-transform: uppercase;
-  font-weight: bold;
-  font-size: 1.7rem;
+  font-weight: lighter;
+  font-size: 1.5rem;
 }
 
 @-webkit-keyframes levitate {
