--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -255,8 +255,8 @@
 
         &--logo {
           text-transform: uppercase;
-          font-weight: bold;
-          font-size: 1.7rem;
+          font-weight: lighter;
+          font-size: 1.5rem;
         }
       }
     }
