--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -258,6 +258,12 @@
           font-weight: lighter;
           font-size: 1.5rem;
         }
+
+        &--item {
+          &:hover {
+            cursor: pointer;
+          }
+        }
       }
     }
   }
