Added moving up animation

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -265,6 +265,7 @@
         &--item {
           &:hover {
             cursor: pointer;
+            transform: translateY(-0.3rem);
           }
         }
       }
