Added color change hover effect

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -267,6 +267,7 @@
           &:hover {
             cursor: pointer;
             transform: translateY(-0.3rem);
+            color: var(--color-dark-2);
           }
         }
       }
