Started adding html markup for cards section

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -274,6 +274,14 @@
     }
   }
 
+  .cards {
+    border: solid crimson 1px;
+    display: flex;
+
+    &--1 {
+    }
+  }
+
   // Button-Animations
   @keyframes levitate {
     0% {
