--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -278,7 +278,21 @@
     border: solid crimson 1px;
     display: flex;
 
-    &--1 {
+    .card--1 {
+      width: 18rem;
+      height: 18rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &__title {
+      }
+
+      &__img {
+        width: 100%;
+        height: 11rem;
+        content: url(/assets/img/card1-img.jpg);
+      }
     }
   }
 
