--- a/css/main.css
+++ b/css/main.css
@@ -414,6 +414,27 @@ body {
   display: flex;
 }
 
+.main .cards .card--1 {
+  width: 18rem;
+  height: 18rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .cards .card--1__img {
+  width: 100%;
+  height: 11rem;
+  content: url(/assets/img/card1-img.jpg);
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
