--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -275,7 +275,7 @@
   }
 
   .cards {
-    border: solid crimson 1px;
+    // border: solid crimson 1px;
     display: flex;
 
     .card--1 {
@@ -284,14 +284,27 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      padding: 1.5rem;
+      background-color: var(--color-light);
+      border-radius: 0.3rem;
 
       &__title {
+        margin-bottom: 0.5rem;
+        color: var(--color-dark);
+        text-transform: uppercase;
       }
 
       &__img {
         width: 100%;
         height: 11rem;
         content: url(/assets/img/card1-img.jpg);
+        border-radius: 0.3rem;
+      }
+
+      &__para {
+        color: var(--color-dark);
+        text-align: center;
       }
     }
   }
