--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -279,15 +279,22 @@
     display: flex;
 
     .card--1 {
-      width: 18rem;
-      height: 18rem;
+      width: 20rem;
+      height: 20rem;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 1.5rem;
+      padding: 0.8rem 2rem;
       background-color: var(--color-light);
       border-radius: 0.3rem;
+      justify-content: space-between;
+      box-shadow: 0rem 0.5rem 1.5rem black;
+      transition: all 0.5s ease;
+      &:hover {
+        transform: scale(1.05);
+        cursor: pointer;
+      }
 
       &__title {
         margin-bottom: 0.5rem;
