--- a/css/main.css
+++ b/css/main.css
@@ -414,8 +414,8 @@ body {
 }
 
 .main .cards .card--1 {
-  width: 18rem;
-  height: 18rem;
+  width: 20rem;
+  height: 20rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -429,9 +429,22 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 1.5rem;
+  padding: 0.8rem 2rem;
   background-color: var(--color-light);
   border-radius: 0.3rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-shadow: 0rem 0.5rem 1.5rem black;
+          box-shadow: 0rem 0.5rem 1.5rem black;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.main .cards .card--1:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  cursor: pointer;
 }
 
 .main .cards .card--1__title {
